[gd_scene load_steps=15 format=3 uid="uid://cw8y3x5j2v4m5"]

[ext_resource type="Script" uid="uid://dc2udenx1u1i" path="res://scripts/main_3d.gd" id="1"]
[ext_resource type="Script" uid="uid://b5eb3picqvrst" path="res://scripts/interaction_area.gd" id="3"]
[ext_resource type="Script" uid="uid://cyvwjs7s2baw8" path="res://scripts/camera_3d.gd" id="4"]
[ext_resource type="Script" uid="uid://noeapswshs8j" path="res://scripts/ai_controller_3d.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://8yrmjhr6fdfp" path="res://scenes/characters/cat.tscn" id="6"]

[sub_resource type="NavigationMesh" id="NavigationMesh_1"]
vertices = PackedVector3Array(-10, 0.1, -10, -10, 0.1, 10, 10, 0.1, 10, 10, 0.1, -10)
polygons = [PackedInt32Array(0, 1, 2), PackedInt32Array(0, 2, 3)]

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(20, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="Material_floor"]
albedo_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="BoxShape3D" id="BoxShape_floor"]
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxMesh" id="BoxMesh_house"]
size = Vector3(3, 2, 3)

[sub_resource type="StandardMaterial3D" id="Material_house"]
albedo_color = Color(0.8, 0.4, 0.2, 1)

[sub_resource type="SphereShape3D" id="SphereShape_interaction"]
radius = 1.5

[sub_resource type="BoxMesh" id="BoxMesh_garden"]
size = Vector3(4, 0.5, 4)

[sub_resource type="StandardMaterial3D" id="Material_garden"]
albedo_color = Color(0.2, 0.8, 0.3, 1)

[node name="Main3D" type="Node3D"]
script = ExtResource("1")
use_ai = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 8, 0)
shadow_enabled = true
shadow_bias = 0.05

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 6, 8)
fov = 60.0
script = ExtResource("4")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_1")

[node name="Floor" type="StaticBody3D" parent="NavigationRegion3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("Material_floor")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Floor"]
shape = SubResource("BoxShape_floor")

[node name="House" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.1, 6)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/House"]
mesh = SubResource("BoxMesh_house")
surface_material_override/0 = SubResource("Material_house")

[node name="InteractionArea" type="Area3D" parent="NavigationRegion3D/House"]
script = ExtResource("3")
interaction_name = "å°å±‹"
interaction_type = "house"

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/House/InteractionArea"]
shape = SubResource("SphereShape_interaction")

[node name="Garden" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.35, -6)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/Garden"]
mesh = SubResource("BoxMesh_garden")
surface_material_override/0 = SubResource("Material_garden")

[node name="InteractionArea" type="Area3D" parent="NavigationRegion3D/Garden"]
script = ExtResource("3")
interaction_name = "èŠ±å›­"
interaction_type = "garden"

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Garden/InteractionArea"]
shape = SubResource("SphereShape_interaction")

[node name="Cat" parent="." instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="AIController" type="Node" parent="."]
script = ExtResource("5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 160.0

[node name="TitleLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "ğŸ± AIçŒ«å’ª - 3Dç™½ç›’åŸå‹"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "çŠ¶æ€: å‡†å¤‡å°±ç»ª"

[node name="ResponseLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="UI/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
placeholder_text = "è¾“å…¥å‘½ä»¤ï¼ˆä¾‹å¦‚ï¼šå»å°å±‹ã€å»èŠ±å›­ï¼‰"

[node name="SendButton" type="Button" parent="UI/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "å‘é€"

[node name="HelpLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "æç¤º: å»å°å±‹ | å»èŠ±å›­ | å›ä¸­å¿ƒ | é¼ æ ‡ä¸­é”®æ—‹è½¬ç›¸æœº | æ»šè½®ç¼©æ”¾"
