extends Node3D
## 3Dåœºæ™¯ä¸»æ§åˆ¶å™¨

@onready var cat = $Cat
@onready var navigation_region = $NavigationRegion3D
@onready var status_label = $UI/Panel/VBoxContainer/StatusLabel
@onready var response_label = $UI/Panel/VBoxContainer/ResponseLabel
@onready var input_field = $UI/Panel/VBoxContainer/HBoxContainer/InputField
@onready var send_button = $UI/Panel/VBoxContainer/HBoxContainer/SendButton
@onready var house_area = $NavigationRegion3D/House/InteractionArea
@onready var garden_area = $NavigationRegion3D/Garden/InteractionArea
@onready var ai_controller = $AIController

@export var use_ai: bool = false  ## æ˜¯å¦ä½¿ç”¨AIï¼ˆfalse=ç®€å•è§„åˆ™åŒ¹é…ï¼‰

# åœºæ™¯ä¸­çš„é‡è¦ä½ç½®
var locations = {
	"house": Vector3(6, 0.5, 6),
	"garden": Vector3(-6, 0.5, -6),
	"center": Vector3(0, 0.5, 0)
}

var location_names = {
	"å°å±‹": "house",
	"æˆ¿å­": "house",
	"å®¶": "house",
	"èŠ±å›­": "garden",
	"garden": "garden",
	"ä¸­å¿ƒ": "center",
	"ä¸­é—´": "center"
}

func _ready():
	# è¿æ¥UIä¿¡å·
	send_button.pressed.connect(_on_send_pressed)
	input_field.text_submitted.connect(_on_text_submitted)
	
	# è¿æ¥äº¤äº’åŒºåŸŸä¿¡å·
	house_area.cat_entered.connect(_on_area_entered)
	garden_area.cat_entered.connect(_on_area_entered)
	
	# è¿æ¥AIæ§åˆ¶å™¨ä¿¡å·ï¼ˆå¦‚æœä½¿ç”¨AIï¼‰
	if use_ai and ai_controller:
		ai_controller.command_processing.connect(_on_ai_processing)
		ai_controller.command_completed.connect(_on_ai_completed)
		ai_controller.command_failed.connect(_on_ai_failed)
	
	# ç­‰å¾…å¯¼èˆªç½‘æ ¼çƒ˜ç„™å®Œæˆ
	await get_tree().process_frame
	_setup_navigation()
	
	var mode = "AIæ¨¡å¼" if use_ai else "è§„åˆ™æ¨¡å¼"
	print("âœ“ 3Dåœºæ™¯åˆå§‹åŒ–å®Œæˆ - ", mode)
	status_label.text = "çŠ¶æ€: å‡†å¤‡å°±ç»ª [%s]" % mode
	response_label.text = "æ¬¢è¿ï¼è¾“å…¥å‘½ä»¤è®©çŒ«å’ªç§»åŠ¨"


func _setup_navigation():
	"""è®¾ç½®å¯¼èˆªç½‘æ ¼"""
	# è¿™é‡Œå¯ä»¥ç¨‹åºåŒ–ç”Ÿæˆå¯¼èˆªç½‘æ ¼
	# æˆ–è€…åœ¨ç¼–è¾‘å™¨ä¸­æ‰‹åŠ¨è®¾ç½®
	pass


func _on_send_pressed():
	var command = input_field.text.strip_edges()
	if command.is_empty():
		return
	
	input_field.text = ""
	
	# æ ¹æ®æ¨¡å¼é€‰æ‹©å¤„ç†æ–¹å¼
	if use_ai and ai_controller:
		ai_controller.process_command(command)
	else:
		process_simple_command(command)


func _on_text_submitted(text: String):
	_on_send_pressed()


func process_simple_command(command: String):
	"""å¤„ç†ç®€å•çš„å‘½ä»¤ï¼ˆä¸ä½¿ç”¨AIï¼‰"""
	status_label.text = "çŠ¶æ€: å¤„ç†å‘½ä»¤ - " + command
	
	# ç®€å•çš„å…³é”®è¯åŒ¹é…
	var target_location = null
	var location_key = null
	
	for name in location_names.keys():
		if name in command:
			location_key = location_names[name]
			target_location = locations[location_key]
			break
	
	if target_location:
		status_label.text = "çŠ¶æ€: å‰å¾€" + location_key
		cat.move_to(target_location)
		await cat.movement_completed
		status_label.text = "çŠ¶æ€: åˆ°è¾¾" + location_key
		
		# è§¦å‘ä½ç½®äº‹ä»¶
		trigger_location_event(location_key)
	else:
		status_label.text = "çŠ¶æ€: ä¸ç†è§£å‘½ä»¤ - " + command


func trigger_location_event(location_key: String):
	"""è§¦å‘ä½ç½®ç›¸å…³çš„äº‹ä»¶"""
	match location_key:
		"house":
			status_label.text = "çŠ¶æ€: åˆ°è¾¾å°å±‹"
			response_label.text = "ğŸ  çŒ«å’ª: å–µ~ (è¿™é‡Œå¥½æ¸©æš–)"
			print("ğŸ  çŒ«å’ªåˆ°è¾¾å°å±‹")
		"garden":
			status_label.text = "çŠ¶æ€: åˆ°è¾¾èŠ±å›­"
			response_label.text = "ğŸŒ¸ çŒ«å’ª: å–µå–µ! (å¥½å¤šèŠ±èŠ±ï¼)"
			print("ğŸŒ¸ çŒ«å’ªåˆ°è¾¾èŠ±å›­")
		"center":
			status_label.text = "çŠ¶æ€: å›åˆ°ä¸­å¿ƒ"
			response_label.text = "â­• çŒ«å’ª: å–µ... (å›å®¶äº†)"
			print("â­• çŒ«å’ªå›åˆ°ä¸­å¿ƒ")


func _on_area_entered(area_name: String, area_type: String):
	"""å½“çŒ«å’ªè¿›å…¥äº¤äº’åŒºåŸŸæ—¶è§¦å‘"""
	trigger_location_event(area_type)


# === AIæ§åˆ¶å™¨å›è°ƒ ===

func _on_ai_processing(command: String):
	status_label.text = "çŠ¶æ€: AIæ€è€ƒä¸­..."
	response_label.text = "ç”¨æˆ·: " + command


func _on_ai_completed(response: Dictionary):
	status_label.text = "çŠ¶æ€: æ‰§è¡Œå®Œæˆ"
	response_label.text = "ğŸ± " + response.get("meow", "å–µ...")


func _on_ai_failed(error: String):
	status_label.text = "çŠ¶æ€: AIå¤±è´¥"
	response_label.text = "âŒ " + error

